--- a/index.html
+++ b/index.html
@@ -9,8 +9,19 @@
 <body>
     <header><h1>ATLETAS DO SPFC</h1></header>
     <main>
+        <section>
+ <form>
   <input type="text" name="busca" placeholder="Digite o nome do atleta">
   <button type="submit">Buscar</button>
+  </form>
+  </section>
+  <section>
+    <h2>Lucas moura</h2>
+    <p>Lucas Moura: Um craque brasileiro de renome internacional
+        Lucas Rodrigues Moura da Silva, mais conhecido como Lucas Moura, é um talentoso futebolista brasileiro que já vestiu as camisas de grandes clubes como São Paulo, Paris Saint-Germain e Tottenham Hotspur. Atualmente, voltou a defender as cores do São Paulo, clube onde iniciou sua carreira profissional. Conhecido por sua velocidade, dribles e habilidade de finalização, Lucas Moura se destacou em diversas competições, conquistando títulos importantes e encantando os fãs do futebol com suas jogadas brilhantes. Sua trajetória no futebol o consolidou como um dos maiores jogadores brasileiros da sua geração.</p>
+  </section>
+
+
 </main>
 
 <Footer><p>2024-Atletas do SPFC-Todos os direitos reservados.
