--- a/index.html
+++ b/index.html
@@ -15,12 +15,7 @@
   <button type="submit">Buscar</button>
   </form>
   </section>
-  <section>
-    <h2>Lucas moura</h2>
-    <p>Lucas Moura: Um craque brasileiro de renome internacional
-        Lucas Rodrigues Moura da Silva, mais conhecido como Lucas Moura, é um talentoso futebolista brasileiro que já vestiu as camisas de grandes clubes como São Paulo, Paris Saint-Germain e Tottenham Hotspur. Atualmente, voltou a defender as cores do São Paulo, clube onde iniciou sua carreira profissional. Conhecido por sua velocidade, dribles e habilidade de finalização, Lucas Moura se destacou em diversas competições, conquistando títulos importantes e encantando os fãs do futebol com suas jogadas brilhantes. Sua trajetória no futebol o consolidou como um dos maiores jogadores brasileiros da sua geração.</p>
-        <a href="https://pt.wikipedia.org/wiki/Lucas_Moura">Mais informaçoes</a>
-  </section>
+   <section class="resultado-pesquisa"id="resultado-pesquisa"></section>
 
 
 </main>
@@ -29,6 +24,7 @@
        <p>Entre em contato pelo email:mathiasprogrammer@gmail.com</p>
 </p>
 </Footer>
-    
+ <script src="dados.js"></script>
+ <script src="app.js"></script>
 </body>
 </html>
