--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <section>
  <form>
   <input type="text" name="busca" placeholder="Digite o nome do atleta">
-  <button type="submit">Buscar</button>
+  <button onclick="pesquisar()">Pesquisar</button>
   </form>
   </section>
    <section class="resultado-pesquisa"id="resultado-pesquisa"></section>
