--- a/index.html
+++ b/index.html
@@ -11,20 +11,21 @@
     <main>
         <section>
  <form>
-  <input type="text" name="busca" placeholder="Digite o nome do atleta">
-  <button onclick="pesquisar()">Pesquisar</button>
+ <input type="text" id="nomeJogador" placeholder="Digite o nome do atleta">
+  <button type="button" onclick="buscarJogador()">Pesquisar</button>
   </form>
   </section>
-   <section class="resultado-pesquisa"id="resultado-pesquisa"></section>
+  <div id="resultados"></div>
+   
 
 
 </main>
 
 <Footer><p>2024-Atletas do SPFC-Todos os direitos reservados.
        <p>Entre em contato pelo email:mathiasprogrammer@gmail.com</p>
+       <p id="atencao">PROJETO NAO FINALIZADO,EM ANDAMENTO...</p>
 </p>
 </Footer>
- <script src="dados.js"></script>
- <script src="app.js"></script>
+ <script src="scripts.js"></script>
 </body>
 </html>
